infra/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.8.3
          command: [sh, -c]
          args:
            - |
              [...]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: auth
              mountPath: /auth
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: auth
          secret:
            secretName: registry-htpasswd
