infra/registry/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: registry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.knodes.app`)
      kind: Rule
      services:
        - name: registry
          port: 5000
  tls:
    certResolver: letsencrypt
